--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 {% block title %}Home - My App{% endblock %}
 
 {% block content %}
-<h2>Welcome to My App</h2>
+<h2>Welcome to My App!</h2>
 <p>This is a fantastic digital application that will solve all your problems!</p>
 <img src="{{ url_for('static', filename='images/app_image.png') }}" alt="App Image">
 <a href="{{ url_for('contact') }}">Contact us</a> to learn more or buy now!
